After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696651 - v4l2loopback:gst_buffer_get_meta: assertion `buffer != NULL' failed."
v4l2loopback:gst_buffer_get_meta: assertion `buffer != NULL' failed."
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.0
Other Linux
: Normal major
: 1.0.7
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-26 15:49 UTC by vvinoth
Modified: 2013-04-03 09:15 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description vvinoth 2013-03-26 15:49:12 UTC
When i execute a gstreamer-1.0 pipeline 

"gst-launch-1.0 -evm videotestsrc ! v4l2sink device=/dev/video1" 

for video loop back using v4l2loopback version 0.6.3 it thows the following error 

"(gst-launch-1.0:17157): GStreamer-CRITICAL **: gst_buffer_get_meta: assertion `buffer != NULL' failed." 

The behaviour is inconsistent, in 5 attempts atleast thrice this error comes. 

System Environment, Ubuntu 12.10, 32bit, 3.5.0-26-generic kernel. 

It looks like some problem with the v4l2loopback element, because when I replace the v4l2lopback with fakesink , it didnt throw any error.
Comment 1 Wim Taymans 2013-04-03 09:15:17 UTC
commit 14300e58059ff5a6ca6cf2b2942804f4f64b8ad0
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Apr 3 11:09:50 2013 +0200

    v4l2: free all queued buffers
    
    Don't just loop over the first num_queued buffers but loop over
    all the buffers and check if they need to be freed. It is possible that
    not all buffers are queued and then the entry in our array will be NULL.
    Those buffers that are not queued were freed in stop().
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=696651